<resources>
    <string name="app_name">Zentrum Familie</string>
    <string name="description">Das Zentrum Familie bietet ein
        vielseitiges Bildungsangebot zu aktuellen Themen rund
        um Familie, Erziehung und Elternsein. Wir möchten Eltern
        partnerschaftlich darin unterstützen, die Entwicklung
        ihres Kindes aktiv zu begleiten!</string>
    <string name="address"><u>Eschenheimer Anlage 21,\n60318 Frankfurt am Main</u></string>
    <string name="phone">+49 69 1501–138</string>
    <string name="web">www.hdv-ffm.de</string>
    <string name="image">Four kids together</string>

</resources>
