<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gmail.anikitin85.zentrumfamilie.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="375">
        <ImageView
            style="@style/Image"
            android:src="@drawable/kids"
            android:contentDescription="@string/image"/>
        <TextView
            style="@style/Header"
            android:text="@string/app_name"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="625"
        android:orientation="vertical">
        <TextView
            style="@style/Text"
            android:drawableLeft="@drawable/ic_info_outline_black_36dp"
            android:text="@string/description" />
        <TextView
            style="@style/Text"
            android:onClick="openMap"
            android:drawableLeft="@drawable/ic_location_on_black_36dp"
            android:text="@string/address"
            android:textColor="@color/colorPrimary"/>
        <TextView
            style="@style/Text"
            android:autoLink="phone"
            android:drawableLeft="@drawable/ic_phone_black_36dp"
            android:text="@string/phone" />
        <TextView
            style="@style/Text"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_public_black_36dp"
            android:text="@string/web" />
    </LinearLayout>
</LinearLayout>